updated <h1> & <button> index.html

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <script defer src="src/index.js"></script>
     </head>
     <body>
-        <h1>Shows</h1>
-        <button id="shows">All Shows</button>
+        <h1>Movies</h1>
+        <button id="shows">All Movies</button>
         <hr>
         <br>
         <div id="main">
