updated the id for both a <div> & it's <ul>

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     </head>
     <body>
         <h1>Movies</h1>
-        <button id="shows">All Movies</button>
+        <button id="movies">All Movies</button>
         <hr>
         <br>
         <div id="main">
-            <ul id="show-list">
+            <ul id="movie-list">
 
             </ul>
             <div id="info">
