created Fetcher: getMovies()

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <script defer src="src/index.js"></script>
     </head>
     <body>
-        <h1>Movies</h1>
+        <h1>SWDb</h1>
         <button id="movies">All Movies</button>
         <hr>
         <br>
@@ -22,7 +22,7 @@
             </div>
         </div>
             <footer class="branding">
-                <small>&copy; 2023 <strong>SWDb</strong></small>
+                <small>&copy; 2023 <strong>StarWars&trade;</strong></small>
             </footer>
     </body>
 </html>
