updated header and footer inside index.html file

--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>StarWarsDatabase</title>
+        <title>Breweries "OnTap"</title>
         <link rel="stylesheet" href="./index.css" />
         <script defer src="src/index.js"></script>
     </head>
     <body>
-        <h1>SWDb</h1>
-        <button id="movies">All Movies</button>
+        <h1>Breweries</h1>
+        <button id="brewery">All Breweries</button>
         <hr>
         <br>
         <div id="main">
-            <ul id="movie-list">
+            <ul id="brewery-list">
 
             </ul>
             <div id="info">
@@ -22,7 +22,7 @@
             </div>
         </div>
             <footer class="branding">
-                <small>&copy; 2023 <strong>StarWars&trade;</strong></small>
+                <small>&copy; 2023 <strong>OnTap&trade;</strong></small>
             </footer>
     </body>
 </html>
