--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Breweries "OnTap"</title>
+        <title>Breweries</title>
         <link rel="stylesheet" href="./index.css" />
         <script defer src="src/index.js"></script>
     </head>
     <body>
-        <h1>Breweries</h1>
+        <h1>Breweries "OnTap"</h1>
         <button id="brewery">All Breweries</button>
         <hr>
         <br>
